fix(menu): remove flicker on native scroll. Fixes #4869

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -35,7 +35,7 @@
 .menu-open .menu-content .pane,
 .menu-open .menu-content .scroll-content {
   pointer-events: none;
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 .grade-b .menu-content,
